--- a/style/style.css
+++ b/style/style.css
@@ -1,328 +1,1 @@
-/*====================================================
-======================= public ========================
-======================================================*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-transform: capitalize;
-}
-
-html,
-body,
-div,
-span,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-abbr,
-address,
-cite,
-code,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-samp,
-small,
-strong,
-sub,
-sup,
-var,
-b,
-i,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: middle;
-  background: transparent;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-  color: #1a222c;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-}
-
-i,
-svg {
-  line-height: 0;
-}
-
-.btn,
-.btn:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-::-webkit-scrollbar {
-  height: 0.5rem;
-  width: 0.4rem;
-}
-
-::-webkit-scrollbar-track {
-  background-color: white;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #1a222c;
-}
-
-section {
-  margin: 3rem 0 0 0;
-  padding: 2rem 0;
-}
-
-.sec-title {
-  color: #1a222c;
-  text-align: center;
-}
-.sec-title p {
-  color: #54516a;
-}
-
-.card {
-  background-color: transparent;
-  padding: 0 1rem;
-  border-radius: 25px;
-  text-align: center;
-  color: #1a222c;
-  height: 100%;
-}
-.card .card-header {
-  background-color: transparent;
-}
-.card .card-img {
-  justify-content: center !important;
-  gap: 0.7rem;
-}
-.card .card-img img {
-  width: 100px;
-  height: 100px;
-}
-.card p {
-  color: #54516a;
-}
-
-.main-btn {
-  padding: 0.5rem 1rem;
-  border-radius: 25px;
-  border: 1px solid #1a222c;
-  color: #1a222c;
-  transition: all 0.3s ease;
-}
-.main-btn:hover {
-  background-color: #1a222c;
-  color: white;
-}
-
-.primary-btn, header .landing .nav a, header .landing .social a {
-  padding: 0.5rem 1rem;
-  border-radius: 25px;
-  border: 1px solid white;
-  color: white;
-  transition: all 0.3s ease;
-}
-.primary-btn:hover, header .landing .nav a:hover, header .landing .social a:hover {
-  background-color: white;
-  color: #1a222c;
-}
-
-/*=======================================================================*/
-/*==========================================================
-======================== extends ===========================
-===========================================================*/
-.flex, footer .content, header .landing .nav, header .landing .social a, header .landing .social, .card .card-img {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-/*==============================================================*/
-/*==========================================================
-======================== header ===========================
-===========================================================*/
-header {
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
-header #particles-js {
-  width: 100%;
-  height: 100%;
-  background-color: #1a222c;
-}
-header .landing {
-  padding: 0 1rem;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-}
-header .landing h1 {
-  font-size: 5rem;
-  font-weight: bold;
-}
-header .landing p {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-header .landing .social {
-  justify-content: center !important;
-  gap: 0.5rem;
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-header .landing .social a {
-  padding: 1rem !important;
-  justify-content: center !important;
-  border-radius: 50% !important;
-}
-header .landing .nav {
-  justify-content: center !important;
-  gap: 1rem;
-}
-@keyframes bounceAnimation {
-  0%, 100% {
-    transform: translateX(-50%) translateY(0);
-    color: white;
-    opacity: 1;
-  }
-  50% {
-    transform: translateX(-50%) translateY(-10%);
-    color: white;
-    opacity: 0.5;
-  }
-}
-header .icon {
-  font-size: 3rem;
-  color: white;
-  position: absolute;
-  bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: bounceAnimation 1s infinite alternate ease-in-out;
-}
-
-/*==============================================================*/
-/*==========================================================
-======================== projects ======================
-===========================================================*/
-.projects_container .project {
-  margin: 2.5rem 0;
-}
-.projects_container .project .row .col-md-4 {
-  order: 1 !important;
-}
-.projects_container .project .row .col-md-8 {
-  order: 2 !important;
-}
-.projects_container .project .row .col-md-8 .details {
-  text-align: end;
-}
-
-/*==============================================================*/
-/*==========================================================
-======================== footer ===========================
-===========================================================*/
-footer {
-  background-color: #1a222c;
-}
-footer .content {
-  color: white;
-  padding: 1.5rem 0;
-}
-footer .content .name {
-  font-weight: bold;
-}
-
-/*==============================================================*/
-@media (max-width: 768px) {
-  footer .content {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  .landing {
-    padding: 0 0.7rem !important;
-  }
-  .landing h1 {
-    font-size: 2.9rem !important;
-  }
-  .landing p {
-    font-size: 1.3rem !important;
-  }
-}/*# sourceMappingURL=style.css.map */
+*{margin:0;padding:0;box-sizing:border-box;text-transform:capitalize}html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;vertical-align:middle;background:rgba(0,0,0,0)}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}ul{list-style:none;padding:0;margin:0}a{text-decoration:none;color:#1a222c}img{width:100%;height:100%}i,svg{line-height:0}.btn,.btn:focus{outline:none;box-shadow:none}::-webkit-scrollbar{height:.5rem;width:.4rem}::-webkit-scrollbar-track{background-color:#fff}::-webkit-scrollbar-thumb{background-color:#1a222c}section{margin:3rem 0 0 0;padding:2rem 0}.sec-title{color:#1a222c;text-align:center}.sec-title h2{font-size:3rem;margin-bottom:.7rem}.sec-title p{color:#54516a;font-size:1.2rem;font-weight:500}.card{background-color:rgba(0,0,0,0);padding:0 1rem;border-radius:25px;text-align:center;color:#1a222c;height:100%;transition:.3s ease-in-out}.card:hover{background-color:#474458;color:#fff}.card:hover .card-header{border-color:#fff}.card .card-header{background-color:rgba(0,0,0,0)}.card .card-img{justify-content:center !important;gap:.7rem}.card .card-img img{width:100px;height:100px}.card p{color:#54516a}.main-btn{padding:.5rem 1rem;border-radius:25px;border:1px solid #1a222c;color:#1a222c;transition:all .3s ease}.main-btn:hover{background-color:#1a222c;color:#fff}.primary-btn,header .landing .nav a,header .landing .social a{padding:.5rem 1rem;border-radius:25px;border:1px solid #fff;color:#fff;transition:all .3s ease}.primary-btn:hover,header .landing .nav a:hover,header .landing .social a:hover{background-color:#fff;color:#1a222c}.flex,footer .content,header .landing .nav,header .landing .social a,header .landing .social,.card .card-img{display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap}header{height:100vh;overflow:hidden;position:relative}header #particles-js{width:100%;height:100%;background-color:#1a222c}header .landing{padding:0 1rem;width:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);text-align:center;color:#fff}header .landing h1{font-size:5rem;font-weight:bold}header .landing p{font-size:2.5rem;margin-bottom:1rem}header .landing .social{justify-content:center !important;gap:.5rem;font-size:1.3rem;margin-bottom:1.5rem}header .landing .social a{padding:.8rem !important;justify-content:center !important;border-radius:50% !important}header .landing .nav{justify-content:center !important;gap:1rem}@keyframes bounceAnimation{0%,100%{transform:translateX(-50%) translateY(0);color:#fff;opacity:1}50%{transform:translateX(-50%) translateY(-10%);color:#fff;opacity:.5}}header .icon{font-size:3rem;color:#fff;position:absolute;bottom:10%;left:50%;transform:translateX(-50%);animation:bounceAnimation 1s infinite alternate ease-in-out}.projects_container .project{margin:2.5rem 0}.projects_container .project .row .col-img{order:1 !important}.projects_container .project .row .col-img .project_img{border-radius:25px;overflow:hidden}.projects_container .project .row .col-img .project_img img{-o-object-fit:cover;object-fit:cover;background-size:cover}.projects_container .project .row .col-text{order:2 !important;text-align:end;padding:0 2rem}.projects_container .project .row .col-text .details .about{margin-bottom:1rem}.projects_container .project .row .col-text .details .about .name{font-size:2rem;font-weight:bold;margin-bottom:.5rem;color:#1a222c}.projects_container .project .row .col-text .details .about .desc{color:#54516a;font-size:1.2rem}footer{background-color:#1a222c}footer .content{color:#fff;padding:1.5rem 0}footer .content .name{font-weight:bold}@media(max-width: 768px){.sec-title h2{font-size:2.5rem !important}.sec-title p{font-size:1rem !important;font-weight:400 !important}footer .content{flex-direction:column;gap:.5rem}.landing{padding:0 .7rem !important}.landing h1{font-size:2.9rem !important}.landing p{font-size:1.3rem !important}.projects_container .project .row .col-text{text-align:center !important;padding:0 .5rem !important}}
