--- a/style/style.scss
+++ b/style/style.scss
@@ -216,6 +216,32 @@ section{
     color: $main_color;
   }
 }
+.input-group{
+  label{
+    width: 100%;
+    margin-bottom: .5rem;
+    margin-left: .5rem;
+    color: $primary_color;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+}
+.form-control{
+  border-radius: 25px !important;
+  padding: .5rem 1rem !important;
+  color: $primary_color;
+  font-size: 1rem;
+  &:focus{
+    box-shadow: none !important;
+    outline: none !important;
+    border-color: $main_color !important;
+  }
+}
+
+
+
+
+
 /*=======================================================================*/
 
 /*==========================================================
@@ -231,6 +257,43 @@ section{
 
 /*==============================================================*/
 
+/*==========================================================
+======================= loader =============================
+==========================================================*/
+
+#loader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $bg_color;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .loader{
+    background: url('../images/logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 300px;
+    height: 300px;
+    -webkit-animation: spin 1.5s linear infinite;
+            animation: spin 1.5s linear infinite;
+  }
+  @-webkit-keyframes spin {
+    0% { opacity:  .8; transform: scale(.5);}
+    100% { opacity:  1; transform: scale(1); }
+  }
+  @keyframes spin {
+    0% { opacity:  .8; transform: scale(.5);}
+    100% { opacity:  1; transform: scale(1); }
+  }
+}
+
+
+/*==========================================================*/
 
 /*==========================================================
 ======================== header ===========================
@@ -369,6 +432,31 @@ header{
 /*==============================================================*/
 
 
+/*===============================================================
+====================== contact ================================
+================================================================*/
+
+.contact_me{
+  .form{
+    border: 1px solid #eee;
+    padding: 2rem;
+    border-radius: 25px;
+  }
+  .modal{
+    .modal-dialog{
+      .modal-content{
+        border-radius: 25px;
+      }
+    }
+  }
+}
+
+.empty-field{
+  color: red !important;
+  border-color: red !important;
+}
+
+
 
 /*==========================================================
 ======================== footer ===========================
@@ -413,7 +501,11 @@ footer{
       font-size: 1.3rem !important;
     }
   }
-
+  .contact_me {
+    .form{
+      padding: 1rem !important;
+    }
+}
   .projects_container{
     .project{
       .row{
